nicknamer/server/lib/tests/snapshots/names_endpoints_tests__can_update_name_successfully.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: update_name_successfully
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<tr id=\"name-row-1\">"
  - "  <td>777888999</td>"
  - "  <td>test-server-1</td>"
  - "  <td class=\"font-semibold\">UpdatedTestUser</td>"
  - "  <th>"
  - "    <button"
  - "      class=\"btn btn-warning btn-sm mr-2\""
  - "      hx-get=\"/names/1/edit\""
  - "      hx-target=\"closest tr\""
  - "      hx-swap=\"outerHTML\""
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z\""
  - "        />"
  - "      </svg>"
  - "      Edit"
  - "    </button>"
  - "    <button"
  - "      class=\"btn btn-error btn-sm\""
  - "      hx-delete=\"/names/1\""
  - "      hx-target=\"#names-table\""
  - "      hx-confirm=\"Are you sure you want to delete this name entry?\""
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16\""
  - "        />"
  - "      </svg>"
  - "      Delete"
  - "    </button>"
  - "  </th>"
  - "</tr>"
